--- a/calculator.CSS
+++ b/calculator.CSS
@@ -4,7 +4,7 @@
     /* color: ; */
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Karla', sans-serif;
+    font-family: 'serif', sans-serif;
  }
  
  body{
@@ -13,23 +13,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(127, 83, 83);
+    background-color: rgb(7, 55, 86);
  }
  .calculator{
     border: 2px solid rgb(144, 128, 52);
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
     background: transparent;
-    background: rgb(73, 51, 73);
+    background: rgb(3, 19, 101);
     box-shadow: 1px 5px 20px rgba(192, 207, 238, 0.5) ;
 
  }
  input{
     width: 300px;
-    border: yellow;
+    border: rgb(133, 25, 6);
     padding: 24px;
     margin: 15px;
-    background: #8d6767;
+    background: #064b71;
     box-shadow: 0px , 12px, 3px reb(84, 84, 84, 0.1); 
     box-shadow: 0px , 12px, 3px rgb(23, 17, 17); 
     font-size: 20px;
@@ -39,17 +39,17 @@
  }
 
  input::placeholder{
-    color: #4e85b2;
-    background-color:rgb(38, 20, 20);
+    color: #020f19;
+    background-color:rgb(197, 220, 23);
     border-radius: 1.%;
  }
 
  button{
-    border: none;
-    width: 56px;
-    height: 70px;
-    margin: 9px;
-    border-radius: 73%;
+   border: none;
+   width: 59px;
+   height: 52px;
+   margin: 9px;
+    border-radius: 10%;
     /* background: transparent; */
     color: #0a0404;
     font-size: 20px;
@@ -58,6 +58,6 @@
  }
 
  .equlBtn{
-    background-color: rgb(171, 70, 30);
+    background-color: rgb(188, 207, 14);
     
- }
+ } 
